Sirtobsi/feature/integrate new data model (#7)
* FEAT remove firebase auth

* FEAT add sqlite database

* FEAT: new datamodel

* Made progress editing UserDao and UserDto. Still issues connecting with other parts of data model.

* Fixed errors with UserDao and UserDto. Program runs.

* FEAT: add postgres database to run locally

* FEAT: update generated API

* FEAT: add validators

* FEAT: update data model & converters

* FEAT: update converter services

* FEAT: update permission checker services

* FEAT: adopt the API to new data model

* DOC: update diagram

* FEAT: update env.example

* [PLT-11] Switch package manager and runtime to Bun (#10)

* run with bun

* revert remove auth

---------
